Support noenable bzlmod in bazel7

--- a/.github/actions/build-test/action.yaml
+++ b/.github/actions/build-test/action.yaml
@@ -37,3 +37,8 @@ runs:
       bazel run //:gazelle
       bazel run //:gazelle_check
     shell: bash
+  - name: Test Bazel 7 targets
+    run: |
+      cd examples/bazel7
+      ./tools/cue/test.sh
+    shell: bash
