--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,6 +2,10 @@ name: Continuous Integration
 on:
   # See https://docs.github.com/en/actions/reference/events-that-trigger-workflows.
   pull_request:
+  push:
+    branches:
+    - main
+    - next
 jobs:
   bazel-source-inspection:
     runs-on: ubuntu-latest
